--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </label>
       </div>
       <hr>
-      <div>Revenus après impots <span id="result"></span></div>
+      <div>Montant de l'impot impots <span id="result"></span></div>
       <div>Detail par tranche <span id="detail"></span></div>
     </section>
     <section>
